--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^9.26.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
+    "pinia": "^3.0.4",
     "prettier": "^3.5.3",
     "swiper": "^11.2.6",
     "vue-router": "^4.5.0",
